<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_permissions_status"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/styled_card_without_border"
    android:elevation="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:orientation="vertical"
        android:paddingLeft="9dp"
        android:paddingTop="9dp"
        android:paddingRight="9dp"
        android:paddingBottom="9dp">


        <TextView
            android:id="@+id/text_view_permissions_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/permissions_status_text"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#E1E4E8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/location"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/location_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:textSize="14sp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"
            android:background="#E1E4E8" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activity_recognition"
                android:textColor="@color/grey"
                android:textSize="14sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/motion_state"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textAlignment="textEnd"
                android:textColor="@color/green"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="16dp"
            android:background="#E1E4E8" />

        <TextView
            android:id="@+id/permission_health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16sp"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="14sp"
            android:textStyle="italic" />

    </LinearLayout>

</RelativeLayout>